[Qt] Fix compilation without QtQuick1 https://bugs.webkit.org/show_bug.cgi?id=80503

Reviewed by Tor Arne Vestbø.

.:

* Source/tests.pri: Compile qml1 tests only with Qt 4 for the moment.

Source/WebKit/qt:

Compile and enable the QtQuick1/QML1 plugin and webview
only if we're using Qt 4 at the moment. QQuick1 clashes
with QQuick2 right now because both declare QDeclarativeEngine
and friends as classes.

* declarative/plugin.cpp:
(WebKitQmlPlugin::registerTypes):
* declarative/public.pri:
* tests/tests.pri:

Tools:

Introduce HAVE_QQUICK1 as feature and added haveQtModule
as convenience function.

* qmake/mkspecs/features/features.prf:
* qmake/mkspecs/features/functions.prf:

Canonical link: https://commits.webkit.org/97667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110050 268f45cc-cd09-0410-ab3c-d52691b4dbfc