Source/WebKit/qt/declarative/plugin.cpp
@@ -17,7 +17,9 @@
     Boston, MA 02110-1301, USA.
 */
 
+#if defined(HAVE_QQUICK1)
 #include "qdeclarativewebview_p.h"
+#endif
 
 #include <QtDeclarative/qdeclarative.h>
 #include <QtDeclarative/qdeclarativeextensionplugin.h>
@@ -49,12 +51,14 @@ public:
     virtual void registerTypes(const char* uri)
     {
         Q_ASSERT(QLatin1String(uri) == QLatin1String("QtWebKit"));
+#if defined(HAVE_QQUICK1)
         qmlRegisterType<QDeclarativeWebSettings>();
         qmlRegisterType<QDeclarativeWebView>(uri, 1, 0, "WebView");
 #ifdef Q_REVISION
         qmlRegisterType<QDeclarativeWebView>(uri, 1, 1, "WebView");
         qmlRegisterRevision<QDeclarativeWebView, 0>("QtWebKit", 1, 0);
         qmlRegisterRevision<QDeclarativeWebView, 1>("QtWebKit", 1, 1);
+#endif
 #endif
 
 #if defined(HAVE_WEBKIT2)
